# inven

./: .env.example  BISP_Report_16221.docx  docker-compose.yaml
backend/: .env.example  .env.test  .gitignore  Dockerfile  Untitled  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/.github/workflows/: deploy.yaml
backend/alembic/: env.py
backend/alembic/versions/: 20260401_144103_db961bf5b36e_inventory_transactions.py  20260401_151839_b26764097954_batch_is_confirmed.py  20260407_000101_b0520e1890cd_add_customer_product_pricing_history.py  20260407_220445_9657a76c0dd8_add_orders_and_order_items.py  20260410_053359_dd175543625d_add_employees_created_by_id.py  20260410_054826_6d71ddb7f071_add_must_change_password_to_users.py  20260410_061000_24a5306bcf32_add_payroll_batch_workers_commission_.py  20260410_070219_ff7fa1d72be6_add_note_to_inventory_transactions.py  20260410_072606_48cb1df6ba59_add_user_permissions_table.py  20260427_000000_a1b2c3d4e5f6_relax_order_price_total_constraints.py  21a489153348_init.py  3325385cd6b5_users.py  5d69fe5e1ec6_fix_typo_in_updated_at.py  db961bf5b36e_inventory_transactions.py  e98f035a5349_add_constraint_to_product_prices.py
backend/app/: main.py  setup.py  svc_dependencies.py
backend/app/auth/: dependencies.py  jwt.py  passwords.py  permissions.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  base.py  batch_workers.py  batches.py  (+12 more)
backend/tests/: conftest.py  test_auth.py  test_batches.py  test_crud_and_permissions.py  test_dashboard_timeseries.py  test_orders.py  test_payroll.py
(+99 files in other folders)
