[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "alembic~=1.18.4",
    "asyncpg~=0.31.0",
    "fastapi[standard]~=0.135.2",
    "psycopg[binary]~=3.3.3",
    "pwdlib[argon2]~=0.3.0",
    "pydantic-settings~=2.13.1",
    "pydantic[email]~=2.12.5",
    "pyjwt[crypto]~=2.12.1",
    "sqlalchemy~=2.0.48",
]

[tool.ruff]
exclude = ['.venv', 'alembic']

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    "bot",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.24,<0.26",
    "httpx>=0.27",
]
